--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="version_unknown">Unknown</string>
     <string name="app_version">Version</string>
     <string name="something_went_wrong">Something Went Wrong !</string>
+
+    <string name="shop">Shop</string>
+    <string name="category">Category</string>
+    <string name="new_">New</string>
+    <string name="me">Me</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
