--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,19 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_in_register">SIGN IN / REGISTER</string>
+    <string name="wallet">Wallet</string>
+    <string name="coupons">Coupons</string>
+    <string name="points">Points</string>
+    <string name="gift_card">Gift Card</string>
+    <string name="my_orders">My Orders</string>
+    <string name="unpaid">Unpaid</string>
+    <string name="processing">Processing</string>
+    <string name="shipping">Shipping</string>
+    <string name="returns">Returns</string>
+    <string name="more_services">More Services</string>
+    <string name="support">Support</string>
+    <string name="share_and_earn"><![CDATA[Share & Earn]]></string>
+    <string name="my_reference">My Reference</string>
+    <string name="settings">Settings</string>
 </resources>
