--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,8 @@
     <string name="share_and_earn"><![CDATA[Share & Earn]]></string>
     <string name="my_reference">My Reference</string>
     <string name="settings">Settings</string>
-
+    <string name="no_internet_connected">No Internet connection</string>
+    <string name="hint_swipe_to_refresh">Swipe down to refresh</string>
 
 
 </resources>
