--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="settings">Settings</string>
     <string name="no_internet_connected">No Internet connection</string>
     <string name="hint_swipe_to_refresh">Swipe down to refresh</string>
+    <string name="new_arrivals">new arrivals</string>
 
 
 </resources>
