--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="no_internet_connected">No Internet connection</string>
     <string name="hint_swipe_to_refresh">Swipe down to refresh</string>
     <string name="new_arrivals">new arrivals</string>
+    <string name="desc_see_more">See more item</string>
+    <string name="see_more">See more</string>
 
 
 </resources>
