--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="see_more">See more</string>
     <string name="sort">Sort</string>
     <string name="filter">Filter</string>
+    <string name="cart">Cart</string>
+    <string name="search">Search</string>
 
 
 </resources>
