--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="cancel">CANCEL</string>
     <string name="customer_services">Customer Services</string>
     <string name="submit">SUBMIT</string>
+    <string name="order_image">order image</string>
 
 
 </resources>
