FAQ Activity Done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="customer_services">Customer Services</string>
     <string name="submit">SUBMIT</string>
     <string name="order_image">order image</string>
+    <string name="faq"><u>FAQ</u></string>
 
 
 </resources>
