sort and filter UI added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,6 +76,8 @@
     <string name="sort_option_4">Price High to Low</string>
     <string name="no_reviews_for_this_product_yet">No reviews for this product yet</string>
     <string name="view_more">View More</string>
+    <string name="clear">CLEAR</string>
+    <string name="apply">Apply</string>
 
 
 </resources>
