ViewPager Added in SingleProductActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,8 @@
     <string name="wish_list_image">wish list image</string>
     <string name="clear">CLEAR</string>
     <string name="apply">Apply</string>
+    
+    <string name="rupee">\u20B9</string>
 
 
 </resources>
