recently viewed api + products on click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
     <string name="wish_list_image">wish list image</string>
     <string name="clear">CLEAR</string>
     <string name="apply">Apply</string>
+    <string name="no_items_here">No Items Here</string>
 
 
 </resources>
