--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
     <string name="sort_by">Sort By</string>
     <string name="size">Size</string>
     <string name="close">Close</string>
+    <string name="search_here">Search Here</string>
 
 
 </resources>
