--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,7 @@
     <string name="size">Size</string>
     <string name="close">Close</string>
     <string name="search_here">Search Here</string>
+    <string name="desc_app_logo">App logo</string>
 
 
 </resources>
