shopping bag toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,7 @@
     <string name="search_here">Search Here</string>
     <string name="shopping_bag_image">shopping bag image</string>
     <string name="desc_app_logo">App logo</string>
+    <string name="wishlist">WishList</string>
 
 
 </resources>
