--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,8 @@
     <string name="enter_new_password">Enter New Password</string>
     <string name="confirm_password">Confirm New Password</string>
     <string name="feedback">Feedback</string>
+    <string name="select_color">Select a color</string>
+    <string name="select_size">Select a size</string>
 
 
 </resources>
