minor ui changes fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="no_reviews_for_this_product_yet">No reviews for this product yet</string>
     <string name="view_more">View More</string>
     <string name="wish_list_image">wish list image</string>
-    <string name="clear">CLEAR</string>
+    <string name="clear">CLEAR ALL</string>
     <string name="apply">Apply</string>
 
     <string name="rupee">\u20B9</string>
