--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="place_order">Place Order</string>
     <string name="total">Total</string>
     <string name="can_not_add_more_items">Can not add more item</string>
+    <string name="tap_to_refresh">Click to Refresh</string>
 
 
 </resources>
